MSE: Reset delaying-the-load-event-flag on attachment

Currently, the earliest non-error case reset of media element's
delaying-the-load-event-flag when MSE is attached occurs at either the
'stalled' event scheduling or once first reaching >= HAVE_CURRENT_DATA.
This change makes Blink compliant with recent MSE spec
clarification [1] that resets this flag immediately upon MSE attachment.
Non-MSE media element delaying-the-load-event-flag behavior remains
unchanged.

[1] https://github.com/w3c/media-source/pull/85

TEST=http/tests/media/media-source/mediasource-attach-stops-delaying-load-event.html
BUG=615481

Review-Url: https://codereview.chromium.org/2021573002
Cr-Commit-Position: refs/heads/master@{#401516}