third_party/WebKit/Source/core/html/HTMLMediaElement.cpp
@@ -3622,6 +3622,7 @@ void HTMLMediaElement::setWebLayer(WebLayer* webLayer)
 
 void HTMLMediaElement::mediaSourceOpened(WebMediaSource* webMediaSource)
 {
+    setShouldDelayLoadEvent(false);
     m_mediaSource->setWebMediaSourceAndOpen(wrapUnique(webMediaSource));
 }
 
